# service/service/routers/authRoutes.js
@@ -1,10 +1,10 @@
 import express from 'express';
-import { register, login } from '../controllers/authController.js';
+import { register, login, googleLogin } from '../controllers/authController.js';
 
 const router = express.Router();
 
 router.post('/register', register);
 router.post('/login', login);
+router.post('/google-login', googleLogin); // 👈 Google Login Route
 
 export default router;
-
